Run Emscripten tests in a browser (#569)

--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -608,6 +608,93 @@ jobs:
         fi
 
         emmake make -j ${{ env.ncpus }} check-cppinterop
+        cd ./unittests/CppInterOp/
+        # Fresh install browsers, and run Emscripten tests in them
+        # This is to match the Emscripten build instructions, where
+        # we run in a fresh browser, to stop any extra installed
+        # stuff interferring with the running of the tests
+        # Explaination of options for emrun
+        # --browser (name of browser on path)
+        # --kill_exit makes it so that when emrun finishes,
+        # that the headless browser we create is killed along with it
+        # --timeout 60 is such that emrun is killed after 60 seconds if
+        # still running. emrun should have finished long before then,
+        # so if it is still running, something went wrong (such as a test
+        # which crashed the html file). This will cause the ci to fail,
+        # as a non 0 value of will be returned.
+        # In the case of Chrome we have the extra --no-sandbox flag, as on
+        # Ubuntu Chrome will refuse to run otherwise, as it expects to have
+        # been installed with admin privileges. This flag allows it to run
+        # in userspace.
+        os="${{ matrix.os }}"
+        if [[ "${os}" == "macos"* ]]; then
+          # Install Firefox
+          wget "https://download.mozilla.org/?product=firefox-latest&os=osx&lang=en-US" -O Firefox-latest.dmg
+          hdiutil attach Firefox-latest.dmg
+          cp -r /Volumes/Firefox/Firefox.app $PWD
+          hdiutil detach /Volumes/Firefox
+          cd ./Firefox.app/Contents/MacOS/
+          export PATH="$PWD:$PATH"
+          cd -
+
+          # Install Google Chrome
+          wget https://dl.google.com/chrome/mac/stable/accept_tos%3Dhttps%253A%252F%252Fwww.google.com%252Fintl%252Fen_ph%252Fchrome%252Fterms%252F%26_and_accept_tos%3Dhttps%253A%252F%252Fpolicies.google.com%252Fterms/googlechrome.pkg
+          pkgutil --expand-full googlechrome.pkg google-chrome
+          cd ./google-chrome/GoogleChrome.pkg/Payload/Google\ Chrome.app/Contents/MacOS/
+          export PATH="$PWD:$PATH"
+          cd -
+
+          # Run tests in browsers
+          echo "Running CppInterOpTests in Firefox"
+          emrun --browser="firefox" --kill_exit --timeout 60 --browser-args="--headless"  CppInterOpTests.html
+          echo "Running DynamicLibraryManagerTests in Firefox"
+          emrun --browser="firefox" --kill_exit --timeout 60 --browser-args="--headless"  DynamicLibraryManagerTests.html
+          echo "Running CppInterOpTests in Google Chrome"
+          emrun --browser="Google Chrome" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html
+          echo "Running DynamicLibraryManagerTests in Google Chrome"          
+          emrun --browser="Google Chrome" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html
+        else
+          export ARCHITECHURE=$(uname -m)
+          if [[ "$ARCHITECHURE" != "aarch64" ]]; then
+            # Install Google Chrome
+            wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+            dpkg-deb -x google-chrome-stable_current_amd64.deb $PWD/chrome
+            cd ./chrome/opt/google/chrome/
+            export PATH="$PWD:$PATH"
+            cd -
+
+            # Install Firefox
+            wget https://ftp.mozilla.org/pub/firefox/releases/138.0.1/linux-x86_64/en-GB/firefox-138.0.1.tar.xz
+            tar -xJf firefox-138.0.1.tar.xz
+            cd ./firefox
+            export PATH="$PWD:$PATH"
+            cd -
+
+            # Run tests in browsers
+            echo "Running CppInterOpTests in Firefox"
+            emrun --browser="firefox" --kill_exit --timeout 60 --browser-args="--headless"  CppInterOpTests.html
+            echo "Running DynamicLibraryManagerTests in Firefox"
+            emrun --browser="firefox" --kill_exit --timeout 60 --browser-args="--headless"  DynamicLibraryManagerTests.html
+            echo "Running CppInterOpTests in Google Chrome"
+            emrun --browser="google-chrome" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  CppInterOpTests.html
+            echo "Running DynamicLibraryManagerTests in Google Chrome"          
+            emrun --browser="google-chrome" --kill_exit --timeout 60 --browser-args="--headless --no-sandbox"  DynamicLibraryManagerTests.html
+          else
+            # Install Firefox
+            wget https://ftp.mozilla.org/pub/firefox/releases/138.0.1/linux-aarch64/en-GB/firefox-138.0.1.tar.xz
+            tar -xJf firefox-138.0.1.tar.xz
+            cd ./firefox
+            export PATH="$PWD:$PATH"
+            cd -
+
+            # Run tests in browsers
+            echo "Running CppInterOpTests in Firefox"
+            emrun --browser="firefox" --kill_exit --timeout 60 --browser-args="--headless"  CppInterOpTests.html
+            echo "Running DynamicLibraryManagerTests in Firefox"
+            emrun --browser="firefox" --kill_exit --timeout 60 --browser-args="--headless"  DynamicLibraryManagerTests.html
+          fi
+        fi
+        cd ../..
         emmake make -j ${{ env.ncpus }} install
         cd ..
 
