--- a/.github/workflows/Ubuntu.yml
+++ b/.github/workflows/Ubuntu.yml
@@ -546,7 +546,14 @@ jobs:
 
         echo "Running valgrind on passing tests"
         CLANG_VERSION="${{ matrix.clang-runtime }}"
-        SUPPRESSION_FILE="../etc/clang${CLANG_VERSION}-valgrind.supp"
+
+        if [[ "${{ matrix.cling }}" == "On" ]]; then
+          CLANG_INTERPRETER="cling"
+        else
+          CLANG_INTERPRETER="clang"
+        fi
+
+        SUPPRESSION_FILE="../etc/${CLANG_INTERPRETER}${CLANG_VERSION}-valgrind.supp"
         valgrind --show-error-list=yes --error-exitcode=1 --track-origins=yes --gen-suppressions=all --suppressions="${SUPPRESSION_FILE}" --suppressions=../etc/valgrind-cppyy-cling.supp python -m pytest -m "not xfail" -sv -ra
         export RETCODE=+$?
         echo ::endgroup::
