Move CppInterOp.h into its own location; issue a warning to help users.
Currently we have the `CppInterOp.h` in `clang/Interpreter/` which makes people
think that it is a clang header file. This patch moves the header into its own
folder to avoid confusion.

--- a/lib/CppInterOp/CMakeLists.txt
+++ b/lib/CppInterOp/CMakeLists.txt
@@ -118,7 +118,7 @@ if(EMSCRIPTEN)
   # unit tests main_module you get errors due to undefined symbols. The reading of the file
   # below into a SYMBOLS_LIST variable is a temporary workaround that exports the undefined
   # symbols from the shared library, until it can be determined why they are not being exported already.
-  file(READ "${CMAKE_SOURCE_DIR}/lib/Interpreter/exports.ld" SYMBOLS_LIST)
+  file(READ "${CMAKE_CURRENT_SOURCE_DIR}/exports.ld" SYMBOLS_LIST)
 
   # Replace newlines with spaces
   string(REPLACE "\n" " " SYMBOLS_LIST "${SYMBOLS_LIST}")
