--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -817,6 +817,7 @@ jobs:
           -DCMAKE_INSTALL_PREFIX=${{ env.PREFIX }}          \
           -DXEUS_CPP_EMSCRIPTEN_WASM_BUILD=ON               \
           -DCMAKE_FIND_ROOT_PATH_MODE_PACKAGE=ON            \
+          -DXEUS_CPP_RESOURCE_DIR=${{ env.LLVM_BUILD_DIR }}/lib/clang/${{ matrix.clang-runtime }} \
           -DSYSROOT_PATH=${{ env.SYSROOT_PATH }}                     \
           ..
         emmake make -j ${{ env.ncpus }} install
