Debug action.yml

--- a/.github/actions/Build_and_Test_cppyy/action.yml
+++ b/.github/actions/Build_and_Test_cppyy/action.yml
@@ -156,6 +156,8 @@ runs:
         # Build and Install cppyy-backend
         cmake -DCppInterOp_DIR=$env:CPPINTEROP_DIR -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} ..
         cmake --build . --config ${{ env.BUILD_TYPE }} --parallel ${{ env.ncpus }}
+        find.exe . -name "*.dll"
+        find.exe . -name "*.lib"
         cp Release\libcppyy-backend.lib $env:CPPINTEROP_DIR\lib\
         cd ..
 
