Apply PR suggestion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,13 +67,25 @@ if( CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR )
 include(GNUInstallDirs)
   ## Define supported version of clang and llvm
 
+if (CPPINTEROP_USE_CLING)
+  set(CLANG_MIN_SUPPORTED 18.0)
+else()
   set(CLANG_MIN_SUPPORTED 16.0)
+endif(CPPINTEROP_USE_CLING)
   set(CLANG_MAX_SUPPORTED "20.1.x")
   set(CLANG_VERSION_UPPER_BOUND 21.0.0)
+if (CPPINTEROP_USE_CLING)
+  set(LLD_MIN_SUPPORTED 18.0)
+else()
   set(LLD_MIN_SUPPORTED 16.0)
+endif(CPPINTEROP_USE_CLING)
   set(LLD_MAX_SUPPORTED "20.1.x")
   set(LLD_VERSION_UPPER_BOUND 21.0.0)
+if (CPPINTEROP_USE_CLING)
+  set(LLVM_MIN_SUPPORTED 18.0)
+else()
   set(LLVM_MIN_SUPPORTED 16.0)
+endif(CPPINTEROP_USE_CLING)
   set(LLVM_MAX_SUPPORTED "20.1.x")
   set(LLVM_VERSION_UPPER_BOUND 21.0.0)
 
