--- a/.github/workflows/Windows-arm.yml
+++ b/.github/workflows/Windows-arm.yml
@@ -121,94 +121,9 @@ jobs:
         choco install findutils
         $env:PATH="C:\Program Files (x86)\GnuWin32\bin;$env:PATH"
 
-    - name: Build LLVM/Cling on Windows systems if the cache is invalid
-      if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-      run: |
-
-        if ( "${{ matrix.cling }}" -imatch "On" )
-        {
-          git clone https://github.com/root-project/cling.git
-          cd ./cling
-          git checkout tags/v${{ matrix.cling-version }}
-          git apply -v ../patches/llvm/cling1.2-LookupHelper.patch
-          cd ..
-          git clone --depth=1 -b cling-llvm${{ matrix.clang-runtime }} https://github.com/root-project/llvm-project.git
-          $env:PWD_DIR= $PWD.Path
-          $env:CLING_DIR="$env:PWD_DIR\cling"
-          echo "CLING_DIR=$env:CLING_DIR"
-        }
-        else
-        {
-          git clone --depth=1 -b release/${{ matrix.clang-runtime }}.x https://github.com/llvm/llvm-project.git
-        }
-
-        cd llvm-project
-        # Build
-        mkdir build
-        if ( "${{ matrix.cling }}" -imatch "On" )
-        {
-          cd build
-          cmake -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects}}" `
-                -DLLVM_EXTERNAL_PROJECTS=cling                `
-                -DLLVM_EXTERNAL_CLING_SOURCE_DIR="$env:CLING_DIR"   `
-                -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}" `
-                -DCMAKE_BUILD_TYPE=Release                         `
-                -DLLVM_ENABLE_ASSERTIONS=ON                        `
-                -DCLANG_ENABLE_STATIC_ANALYZER=OFF                 `
-                -DCLANG_ENABLE_ARCMT=OFF                           `
-                -DCLANG_ENABLE_FORMAT=OFF                          `
-                -DCLANG_ENABLE_BOOTSTRAP=OFF                       `
-                ..\llvm
-          cmake --build . --config Release --target clang --parallel ${{ env.ncpus }}
-          cmake --build . --config Release --target LLVMOrcDebugging --parallel ${{ env.ncpus }}
-          cmake --build . --config Release --target clingInterpreter --parallel ${{ env.ncpus }}
-        }
-        else
-        {
-          cp -r ..\patches\llvm\clang${{ matrix.clang-runtime }}*
-          #FIXME: Apply patches without hardcoding
-          if ( "${{ matrix.clang-runtime }}" -imatch "16" )
-          {
-            git apply -v clang16-1-Value.patch
-            git apply -v clang16-2-CUDA.patch
-            git apply -v clang16-3-WeakRef.patch
-          }
-          elseif ( "${{ matrix.clang-runtime }}" -imatch "17" )
-          {
-            git apply -v clang17-1-NewOperator.patch
-          }
-          cd build
-          echo "Apply clang${{ matrix.clang-runtime }}-*.patch patches:"
-          cmake -DLLVM_ENABLE_PROJECTS="${{ matrix.llvm_enable_projects}}"                   `
-                -DLLVM_TARGETS_TO_BUILD="${{ matrix.llvm_targets_to_build }}"          `
-                -DCMAKE_BUILD_TYPE=Release                          `
-                -DLLVM_ENABLE_ASSERTIONS=ON                         `
-                -DCLANG_ENABLE_STATIC_ANALYZER=OFF                  `
-                -DCLANG_ENABLE_ARCMT=OFF                            `
-                -DCLANG_ENABLE_FORMAT=OFF                           `
-                -DCLANG_ENABLE_BOOTSTRAP=OFF                        `
-                ..\llvm
-          cmake --build . --config Release --target clang clangInterpreter clangStaticAnalyzerCore --parallel ${{ env.ncpus }}
-        }
-        cd ..\
-        rm -r -force $(find.exe . -maxdepth 1 ! -name "build" ! -name "llvm" ! -name "clang" ! -name ".")
-        if ( "${{ matrix.cling }}" -imatch "On" )
-        {
-          cd .\llvm\
-          rm -r -force $(find.exe . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake" ! -name "utils" ! -name ".")
-          cd ..\clang\
-          rm -r -force $(find.exe . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake" ! -name "utils" ! -name ".")
-          cd ..\..\cling\
-          rm -r -force $(find.exe . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake" ! -name ".")
-        }
-        else
-        {
-          cd .\llvm\
-          rm -r -force $(find.exe . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake" ! -name ".")
-          cd ..\clang\
-          rm -r -force $(find.exe . -maxdepth 1 ! -name "include" ! -name "lib" ! -name "cmake"  ! -name ".")
-          cd ..\..
-        }
+    - uses: ./.github/actions/Build_LLVM
+      with:
+        cache-hit: ${{ steps.cache.outputs.cache-hit }}
 
     - name: Save Cache LLVM/Clang runtime build directory
       uses: actions/cache/save@v4
