--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build_cache:
+  build:
     name: ${{ matrix.name }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -82,10 +82,8 @@ jobs:
           llvm-project
           ${{ matrix.cling=='On' && 'cling' || '' }}
         key: ${{ env.CLING_HASH }}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x-patch-${{ hashFiles(format('patches/llvm/clang{0}-*.patch', matrix.clang-runtime)) || 'none' }}
-        lookup-only: true
 
     - name: Setup default Build Type on Windows
-      if: ${{ steps.cache.outputs.cache-hit != 'true' }}
       run: |
         echo "BUILD_TYPE=Release" >> $env:GITHUB_ENV
         echo "CODE_COVERAGE=0" >>  $env:GITHUB_ENV
@@ -93,7 +91,6 @@ jobs:
         echo "ncpus=$env:ncpus" >> $env:GITHUB_ENV
 
     - name: Setup compiler on Windows
-      if: ${{ steps.cache.outputs.cache-hit != 'true' }}
       run: |
         if ( "${{ matrix.compiler }}" -imatch "clang" )
         {
@@ -116,7 +113,6 @@ jobs:
         }
 
     - name: Install deps on Windows
-      if: ${{ steps.cache.outputs.cache-hit != 'true' }}
       run: |
         choco install findutils
         $env:PATH="C:\Program Files (x86)\GnuWin32\bin;$env:PATH"
@@ -132,104 +128,7 @@ jobs:
         path: |
           llvm-project
           ${{ matrix.cling=='On' && 'cling' || '' }}
-        key: ${{ steps.cache.outputs.cache-primary-key }}
-
-  cppinterop_and_cppyy_build:
-    needs: [build_cache]
-    name: ${{ matrix.name }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - name: win2025-msvc-clang-repl-20
-            os: windows-2025
-            compiler: msvc
-            clang-runtime: '20'
-            cling: Off
-            cppyy: Off
-          - name: win2025-msvc-clang18-cling
-            os: windows-2025
-            compiler: msvc
-            clang-runtime: '18'
-            cling: On
-            cling-version: '1.2'
-            cppyy: Off
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-
-    - name: Save PR Info on Windows systems
-      run: |
-        #can be found
-        mkdir  ./pr
-        echo "${{ github.event.number }}" > ./pr/NR
-        echo ${{ github.repository }} > ./pr/REPO
-
-        if ( "${{ matrix.cling }}" -imatch "On" )
-        {
-          $env:CLING_HASH_TEMP = ( git ls-remote https://github.com/root-project/cling.git refs/tags/v${{ matrix.cling-version }} )
-          $env:CLING_HASH = $env:CLING_HASH_TEMP -replace "\t","-"
-        }
-        else
-        {
-          $env:CLING_HASH="Repl"
-          # May need to revert back to both having same llvm_hash, as below cause llvm to be rebuilt everytime commit is made to llvm/llvm-project for release a.x
-          # which could be quite often for new releases
-          $env:LLVM_HASH_TEMP = (git ls-remote https://github.com/llvm/llvm-project.git refs/heads/release/${{ matrix.clang-runtime}}.x )
-          $env:LLVM_HASH = $env:LLVM_HASH_TEMP -replace "\t","-"
-        }
-
-        echo "CLING_HASH=$env:CLING_HASH"
-        echo "LLVM_HASH=$env:LLVM_HASH"
-
-        echo "CLING_HASH=$env:CLING_HASH" >> $GITHUB_ENV
-        echo "LLVM_HASH=$env:LLVM_HASH" >> $GITHUB_ENV
-
-    - name: Setup default Build Type on Windows
-      run: |
-        echo "BUILD_TYPE=Release" >> $env:GITHUB_ENV
-        echo "CODE_COVERAGE=0" >>  $env:GITHUB_ENV
-        $env:ncpus=$([Environment]::ProcessorCount)
-        echo "ncpus=$env:ncpus" >> $env:GITHUB_ENV
-
-    - name: Setup compiler on Windows
-      run: |
-        if ( "${{ matrix.compiler }}" -imatch "clang" )
-        {
-          $ver="${{ matrix.compiler }}".split("-")[1]
-          choco install llvm --version=$ver --no-progress -my
-          clang --version
-          #
-          $env:CC="clang"
-          $env:CXX="clang++"
-          echo "CC=clang" >> $env:GITHUB_ENV
-          echo "CXX=clang++" >> $env:GITHUB_ENV
-        }
-        elseif ( "${{ matrix.compiler }}" -imatch "msvc" )
-        {
-          # MSVC is builtin in container image
-        }
-        else
-        {
-          echo "Unsupported compiler - fix YAML file"
-        }
-
-    - name: Restore Cache LLVM/Clang runtime build directory
-      uses: actions/cache/restore@v4
-      id: cache
-      with:
-        path: |
-          llvm-project
-          ${{ matrix.cling=='On' && 'cling' || '' }}
-        key: ${{ env.CLING_HASH }}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x-patch-${{ hashFiles(format('patches/llvm/clang{0}-*.patch', matrix.clang-runtime)) || 'none' }}
+        key: ${{ steps.cache.outputs.cache-primary-key }}   
 
     - uses: ./.github/actions/Build_and_Test_CppInterOp
 
