Try exporting new set of symbols msvc

--- a/lib/CppInterOp/CMakeLists.txt
+++ b/lib/CppInterOp/CMakeLists.txt
@@ -149,11 +149,11 @@ set_source_files_properties(CppInterOp.cpp PROPERTIES COMPILE_DEFINITIONS
 
 if(MSVC)
   target_link_options(clangCppInterOp PRIVATE
-    "/INCLUDE:?write@raw_ostream@llvm@@QEAAAEAV12@PEBD_K@Z"
-    "/INCLUDE:?errs@llvm@@YAAEAVraw_fd_ostream@1@XZ"
-    "/INCLUDE:?DestroyDataAndMakeUninit@APValue@clang@@AEAAXXZ"
-    "/INCLUDE:?dbgs@llvm@@YAAEAVraw_ostream@1@XZ"
-    "/INCLUDE:?fatalUncheckedError@Error@llvm@@AEBAXXZ"
-    "/INCLUDE:?logAllUnhandledErrors@llvm@@YAXVError@1@AEAVraw_ostream@1@VTwine@1@@Z"
+    "/EXPORT:?write@raw_ostream@llvm@@QEAAAEAV12@PEBD_K@Z"
+    "/EXPORT:?errs@llvm@@YAAEAVraw_fd_ostream@1@XZ"
+    "/EXPORT:?DestroyDataAndMakeUninit@APValue@clang@@AEAAXXZ"
+    "/EXPORT:?dbgs@llvm@@YAAEAVraw_ostream@1@XZ"
+    "/EXPORT:?fatalUncheckedError@Error@llvm@@AEBAXXZ"
+    "/EXPORT:?logAllUnhandledErrors@llvm@@YAXVError@1@AEAVraw_ostream@1@VTwine@1@@Z"
   )
 endif()
