Update CMakeLists.txt to export more symbols

--- a/lib/CppInterOp/CMakeLists.txt
+++ b/lib/CppInterOp/CMakeLists.txt
@@ -163,5 +163,22 @@ if(MSVC)
     "/EXPORT:?getNumParams@FunctionDecl@clang@@QEBAIXZ"
     "/EXPORT:?getTemplateInstantiationPattern@FunctionDecl@clang@@QEBAPEAV12@_N@Z"
     "/EXPORT:?getTemplateSpecializationArgs@FunctionDecl@clang@@QEBAPEBVTemplateArgumentList@2@XZ"
+    "/EXPORT:?getLValueReferenceType@ASTContext@clang@@QEBA?AVQualType@2@V32@_N@Z"
+    "/EXPORT:?getCompilerInstance@Interpreter@clang@@QEAAPEAVCompilerInstance@2@XZ"
+    "/EXPORT:?RunningOnValgrind@sys@llvm@@YA_NXZ"
+    "/EXPORT:?grow_pod@?$SmallVectorBase@_K@llvm@@IEAAXPEAX_K1@Z"
+    "/EXPORT:?access@fs@sys@llvm@@YA?AVerror_code@std@@AEBVTwine@3@W4AccessMode@123@@Z"
+    "/EXPORT:?CreateCpp@IncrementalCompilerBuilder@clang@@QEAA?AV?$Expected@V?$unique_ptr@VCompilerInstance@clang@@U?$default_delete@VCompilerInstance@clang@@@std@@@std@@@llvm@@XZ"
+    "/EXPORT:?create@Interpreter@clang@@SA?AV?$Expected@V?$unique_ptr@VInterpreter@clang@@U?$default_delete@VInterpreter@clang@@@std@@@std@@@llvm@@V?$unique_ptr@VCompilerInstance@clang@@U?$default_delete@VCompilerInstance@clang@@@std@@@std@@@Z"
+    "/EXPORT:?grow_pod@?$SmallVectorBase@I@llvm@@IEAAXPEAX_K1@Z"
+    "/EXPORT:??0APInt@llvm@@QEAA@IV?$ArrayRef@_K@1@@Z"
+    "/EXPORT:?sext@APInt@llvm@@QEBA?AV12@I@Z"
+    "/EXPORT:?zext@APInt@llvm@@QEBA?AV12@I@Z"
+    "/EXPORT:?initSlowCase@APInt@llvm@@AEAAX_K_N@Z"
+    "/EXPORT:?compare@APInt@llvm@@AEBAHAEBV12@@Z"
+    "/EXPORT:?compareSigned@APInt@llvm@@AEBAHAEBV12@@Z"
+    "/EXPORT:?compareValues@APSInt@llvm@@SAHAEBV12@0@Z"
+    "/EXPORT:??1raw_ostream@llvm@@UEAA@XZ"
+    "/EXPORT:??1raw_string_ostream"
   )
 endif()
