--- a/lib/CppInterOp/CMakeLists.txt
+++ b/lib/CppInterOp/CMakeLists.txt
@@ -182,5 +182,12 @@ if(MSVC)
     "/EXPORT:??1raw_string_ostream"
     "/EXPORT:??1raw_string_ostream@llvm@@UEAA@XZ"
     "/EXPORT:?write_impl@raw_string_ostream@llvm@@EEAAXPEBD_K@Z"
+    "/EXPORT:?changeColor@raw_ostream@llvm@@UEAAAEAV12@W4Colors@12@_N1@Z"
+    "/EXPORT:?resetColor@raw_ostream@llvm@@UEAAAEAV12@XZ"
+    "/EXPORT:?reverseColor@raw_ostream@llvm@@UEAAAEAV12@XZ"
+    "/EXPORT:?preferred_buffer_size@raw_ostream@llvm@@MEBA_KXZ"
+    "/EXPORT:?SetBufferAndMode@raw_ostream@llvm@@AEAAXPEAD_KW4BufferKind@12@@Z"
+    "/EXPORT:?flush_nonempty@raw_ostream@llvm@@AEAAXXZ"
+    "/EXPORT:?anchor@raw_ostream@llvm@@EEAAXXZ"
   )
 endif()
